# ChatBot

./: .env.example  README.md  config.toml  pyproject.toml  pyproject.toml.bak  方便调试.txt
src/plugins/chat/: __init__.py  ai_client.py  bot.py  config.py  context_manager.py  group_manager.py  lifecycle.py  message_handler.py
src/utils/: console_debug.py
